--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "paypal-nvp-api": "^1.3.0"
   }
 }
