--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PP_USERNAME='rozumiq_api1.gmail.com'
-PP_PASSWORD='W9LZYB4HK6QDMK5V'
-PP_SIGNATURE='ATDc66oLqGYKlnyDpI-hw-0gsez3A9Nzy.TwV3-Pr.VJ.5SZfmgx1Ks7'
+PP_USERNAME=''
+PP_PASSWORD=''
+PP_SIGNATURE=''
 
-SG_KEY='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'
+SG_KEY=''
